--- a/it_modernization/data/events.yaml
+++ b/it_modernization/data/events.yaml
@@ -653,8 +653,7 @@
 
 - date: 2025-02-04
   type: report
-  event: One of AFGE's members who works in the headquarters of the Department received an instruction from Department leadership that Elon Musk and his DOGE team would be accessing Department of Labor headquarters beginning around 4 p.m. on February 5, 2025. This member and other employees were told by Department leadership that when Mr. Musk and his team visit, they are to do whatever they ask, not to push back, not to ask questions. They were told to provide access to any DOL system they requested
-    access to and not to worry about any security protocols; just do it.
+  event: One of AFGE's members who works in the headquarters of the Department received an instruction from Department leadership that Elon Musk and his DOGE team would be accessing Department of Labor headquarters beginning around 4 p.m. on February 5, 2025. This member and other employees were told by Department leadership that when Mr. Musk and his team visit, they are to do whatever they ask, not to push back, not to ask questions. They were told to provide access to any DOL system they requested access to and not to worry about any security protocols; just do it.
   named:
   - Elon Musk
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.29.8_1.pdf
@@ -3306,6 +3305,12 @@
 
 - date: 2025-03-28
   type: disruption
+  event: The Deputy CIO for Infrastructure/IT at SSA acknowledges network crashes due to a newly-introduced fraud checking system created by DOGE
+  source: https://www.washingtonpost.com/politics/2025/04/07/social-security-website-crashes-musk-trump/
+  agency: SSA
+
+- date: 2025-03-28
+  type: disruption
   event: Almost all of the remaining 900 USAID employees are terminated by email from Jeremy Lewin with RIFs that will go into effect either in July or September
   named:
   - Jeremy Lewin
@@ -3573,3 +3578,9 @@
   - Sam Corcos
   source: https://www.wired.com/story/doge-hackathon-irs-data-palantir/
   agency: IRS
+
+- date: 2025-04-07
+  type: disruption
+  event: The Post confirms with multiple source that Social Security's website has crashed repeatedly in recent weeks, with outages ranging from 20 minutes to an entire day. They speculate this is due to the introduction of an expanded fraud check system created by DOGE that wasn't tested for scalability before being deployed.
+  source: https://www.washingtonpost.com/politics/2025/04/07/social-security-website-crashes-musk-trump/
+  agency: SSA
