--- a/it_modernization/data/events.yaml
+++ b/it_modernization/data/events.yaml
@@ -74,7 +74,7 @@
 
 - date: 2025-01-17
   type: report
-  event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staff
+  event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staffers
   named:
   - Riley Sennott
   - Derek Geissler
