--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -299,7 +299,7 @@ Baris Akis:
     source: https://www.nytimes.com/2024/12/06/us/politics/trump-elon-musk-silicon-valley.html
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Baris Akis
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
 
@@ -313,7 +313,7 @@ Brad Smith:
   events:
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Brad Smith
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
   - agency: HHS
@@ -365,7 +365,7 @@ Brooks Morgan:
   events:
   - agency: DOGE
     date: 2025-01-17
-    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staff
+    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staffers
     name: Brooks Morgan
     source: https://www.msn.com/en-us/money/companies/we-found-a-doge-guy-at-nasa-because-his-google-calendar-was-public/ar-AA1At75X
   - agency: Education
@@ -557,7 +557,7 @@ Conor Fennessy:
   events:
   - agency: DOGE
     date: 2025-01-17
-    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staff
+    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staffers
     name: Conor Fennessy
     source: https://www.msn.com/en-us/money/companies/we-found-a-doge-guy-at-nasa-because-his-google-calendar-was-public/ar-AA1At75X
   - agency: HHS
@@ -585,7 +585,7 @@ Derek Geissler:
   events:
   - agency: DOGE
     date: 2025-01-17
-    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staff
+    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staffers
     name: Derek Geissler
     source: https://www.msn.com/en-us/money/companies/we-found-a-doge-guy-at-nasa-because-his-google-calendar-was-public/ar-AA1At75X
   - agency: DOL
@@ -1076,7 +1076,7 @@ James Burnham:
   events:
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: James Burnham
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
   - agency: USIP
@@ -1170,7 +1170,7 @@ Joanna Wischer:
   events:
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Joanna Wischer
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
 
@@ -1356,7 +1356,7 @@ Katie Miller:
   events:
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Katie Miller
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
 
@@ -1725,7 +1725,7 @@ Marc Andreessen:
     source: https://www.washingtonexaminer.com/news/investigations/3287555/maga-conservative-non-profits-doge-research/
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Marc Andreessen
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
 
@@ -2252,7 +2252,7 @@ Rachel Riley:
   events:
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Rachel Riley
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
   - agency: NIH
@@ -2300,7 +2300,7 @@ Riley Sennott:
     source: https://www.msn.com/en-us/money/companies/we-found-a-doge-guy-at-nasa-because-his-google-calendar-was-public/ar-AA1At75X
   - agency: DOGE
     date: 2025-01-17
-    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staff
+    event: The public calendar of Riley Sennott mentions a 30-minute "SGE Ethics Discussion" meeting with 2 GSA addresses and other DOGE staffers
     name: Riley Sennott
     source: https://www.msn.com/en-us/money/companies/we-found-a-doge-guy-at-nasa-because-his-google-calendar-was-public/ar-AA1At75X
   - agency: NASA
@@ -2465,7 +2465,7 @@ Shaun Maguire:
     source: https://www.washingtonexaminer.com/news/investigations/3287555/maga-conservative-non-profits-doge-research/
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Shaun Maguire
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
 
@@ -2530,7 +2530,7 @@ Steve Davis:
     source: https://www.nytimes.com/2024/12/06/us/politics/trump-elon-musk-silicon-valley.html
   - agency: DOGE
     date: 2025-01-24
-    event: A report from Business Insider names some of the DOGE staff that was involved in transition activities
+    event: A report from Business Insider names some of the DOGE staffers who were involved in transition activities
     name: Steve Davis
     source: https://www.yahoo.com/news/doge-just-got-hire-224212262.html
   - agency: GSA
